# Gobble

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.iggy-local  LICENSE  NOTES.md  README.md  ROADMAP.md  TRACKER.md  docker-compose.local.yml
.github/workflows/: deploy.yaml
crates/tracker-shared/: Cargo.toml
crates/tracker-shared/src/: health.rs  lib.rs  resolve.rs
crates/webhook-consumer/: Cargo.toml
crates/webhook-consumer/src/: main.rs
docker/: Dockerfile.ai-query  Dockerfile.core  Dockerfile.iggy-edge  Dockerfile.polars-lite  Dockerfile.polars-query  Dockerfile.webhook-consumer
docs/: onboarding.md
iggy-demo/: Cargo.toml
iggy-demo/src/: main.rs
k8s/: ai-query.yaml  cert-manager.yaml  configmap.yaml  consumers.yaml  iggy-config.yaml  iggy.yaml  ingress.yaml  kustomization.yaml  polars-lite.yaml  polars-query.yaml  secrets.yaml  sse-gateway.yaml  tracker-core.yaml
scripts/: fire-500x8.ts  test-100-clicks.ts  test-500-clicks.ts  test-conversions.ts  test-realistic-clicks.ts  test-sse-pipeline.sh  webhook_receiver.js
src/: api.rs  config.rs  crypto.rs  event.rs  ingest_token_cache.rs  lib.rs  main.rs  producer.rs  rate_limiter.rs  routes.rs  tenant_cache.rs  tracking_url_cache.rs
src/db/: risingwave_schema.sql
tools/: god-mode.html
