[package]
name = "iggy-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "iggy-demo"
path = "src/main.rs"

[dependencies]
iggy = { path = "../../core/sdk" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
