[package]
name = "webhook-consumer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webhook-consumer"
path = "src/main.rs"

[dependencies]
tracker-shared = { path = "../tracker-shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iggy = "=0.8.3-edge.1"
iggy_common = "=0.8.3-edge.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
